# obentou-cli

./: .gitignore  Cargo.toml  README.md  metadata.toml  output.json
src/: app.rs  arrange.rs  card.rs  config.rs  data.rs  helper.rs  lib.rs  main.rs
