[package]
name = "obentou_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
crossterm = "0.27.0"
env_logger = "0.11.3"
log = "0.4.21"
ratatui = "0.26.2"
serde_json = "1.0.116"
simple_logger = "5.0.0"
toml = "0.8.12"
tui-textarea = "0.4.0"
